--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <div class="dropdown-content results"></div>
                 </div>
             </div>
+            <div class="block selected-book"></div>
         </div>
 
 
