--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
     </div>
     <section class="content">
-        <div class="box">
+        <div class="p-4 has-background-light">
             <h3>Search for a book:</h3>
             <input type="text" class="input">
             <div class="dropdown">
